deployment/download-model-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: download-model-pod
  namespace: liuyunxin
spec:
  containers:
  - name: download-model
    image: harbor.xa.xshixun.com:7443/hanfeigeng/vllm/vllm-openai:v0.10.2-linux-amd64
    command: ["bash", "-c"]
    args:
    - |
      [...]
    volumeMounts:
    - name: gpfshome
      mountPath: /root
    resources:
      limits:
        memory: "16Gi"
        cpu: "4"
      requests:
        memory: "8Gi"
        cpu: "2"
  volumes:
  - name: gpfshome
    persistentVolumeClaim:
      claimName: pvc-gpfshome-liuyunxin
