deployment/download-repo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: download-repo
  namespace: liuyunxin
  labels:
    app: download-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: download-repo
  template:
    metadata:
      labels:
        app: download-repo
    spec:
      containers:
      - name: download-repo
        image: harbor.xa.xshixun.com:7443/hanfeigeng/context-fold-agent:0.5-swe
        command: ["bash", "-c"]
        args:
        #- python3 scripts/download_repo.py --base-dir /root/swe-data --workers 8
        - sleep infinity
        resources:
          limits:
            memory: "32Gi"
            cpu: "16"
          requests:
            memory: "32Gi"
            cpu: "16"
        volumeMounts:
        - name: gpfshome
          mountPath: /root
      volumes:
      - name: gpfshome
        persistentVolumeClaim:
          claimName: pvc-gpfshome-liuyunxin
