deployment/local-llm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-llm
  namespace: liuyunxin
  labels:
    app: local-llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-llm
  template:
    metadata:
      labels:
        app: local-llm
    spec:
      containers:
      - name: nvidia-dcgm-exporter
        image: harbor.xa.xshixun.com:7443/hanfeigeng/docker.io/nvidia/dcgm-exporter:4.4.2-4.7.1-ubuntu22.04-linux-amd64
        ports:
        - containerPort: 9400
        securityContext:
          runAsUser: 0
          capabilities:
            add:
            - SYS_ADMIN
        resources:
          limits:
            memory: 500Mi
            cpu: "500m"
          requests:
            memory: 500Mi
            cpu: "500m"
        volumeMounts:
        - name: nvidia-libs
          mountPath: /usr/local/nvidia/lib
          readOnly: true
      - name: local-llm
        image:  harbor.xa.xshixun.com:7443/hanfeigeng/vllm/vllm-openai:v0.13.0-linux-amd64-otel
        #command: ["sleep", "infinity"]
        command: ["bash", "-c"]
        args:
        - |
          [...]
        ports:
        - containerPort: 8080
        resources:
          limits:
            nvidia.com/gpu: 1
            memory: 64Gi
            cpu: "16"
          requests:
            nvidia.com/gpu: 1
            memory: 64Gi
            cpu: "16"
        volumeMounts:
        - name: gpfshome
          mountPath: /root
          # This will automatically make /root/.cache/huggingface persistent
      volumes:
      - name: gpfshome
        persistentVolumeClaim:
          claimName: pvc-gpfshome-liuyunxin
      - name: nvidia-libs
        hostPath:
          path: /usr/lib/x86_64-linux-gnu

---
apiVersion: v1
kind: Service
metadata:
  name: local-llm
  namespace: liuyunxin
spec:
  selector:
    app: local-llm
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: local-llm-dcgm-exporter
  namespace: liuyunxin
spec:
  selector:
    app: local-llm
  ports:
  - port: 9400
    targetPort: 9400
  type: ClusterIP
